--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "hbs": "^4.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^5.4.16",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "passport-local": "^1.0.0"
   }
 }
