--- a/package.json
+++ b/package.json
@@ -19,11 +19,18 @@
   },
   "homepage": "https://github.com/Oryinn/WDIProject2#readme",
   "dependencies": {
+    "bcrypt": "^3.0.4",
+    "bcrypt-nodejs": "0.0.3",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "hbs": "^4.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^5.4.16",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
